# Socket

./: .doxygen  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  makefile
bluetooth/: bluetooth_socket.cpp  bluetooth_socket.h  bth_addr.cpp  bth_addr.h  rfcomm_addr.cpp  rfcomm_addr.h  rfcomm_socket.cpp  rfcomm_socket.h
common/: basic_socket.cpp  basic_socket.h  basic_socket.inl  socket.cpp  socket.h
include/NetworkLibrary/: Bluetooth.h  IPv4.h  IPv6.h  Poll.h  Unix.h
include/NetworkLibrary/details/: Socket.h
include/bluetooth/: bluetooth_socket.h  bth_addr.h  rfcomm_socket.h
include/common/: basic_socket.h  basic_socket.inl  poll.h  socket.h
include/ipv4/: ipv4_addr.h  tcp_socket.h  udp_socket.h
include/ipv6/: ipv6_addr.h  tcp6_socket.h  udp6_socket.h
include/socket/bluetooth/: bluetooth_socket.h  bth_addr.h  rfcomm_socket.h
include/socket/common/: basic_socket.h  poll.h  socket.h
include/socket/ipv4/: ipv4_addr.h  tcp_socket.h
include/socket/ipv6/: ipv6_addr.h
include/socket/unix/: unix_addr.h
include/unix/: unix_addr.h  unix_socket.h
ipv4/: ipv4_addr.cpp  ipv4_addr.h  tcp_socket.cpp  tcp_socket.h  udp_socket.cpp  udp_socket.h
ipv6/: ipv6_addr.cpp  ipv6_addr.h  tcp6_socket.h  udp6_socket.h
src/: Bluetooth.cpp  IPv4.cpp  IPv6.cpp  Poll.cpp  Socket.cpp  Unix.cpp
src/bluetooth/: bluetooth_socket.cpp  bth_addr.cpp
src/common/: basic_socket.cpp  poll.cpp  socket.cpp
src/internals/: internal_bluetooth.cpp  internal_bluetooth.h  internal_os_stuff.h  internal_socket.cpp  internal_socket.h
src/ipv4/: ipv4_addr.cpp
src/ipv6/: ipv6_addr.cpp
src/unix/: unix_addr.cpp
tests/: main.cpp
unix/: unix_addr.cpp  unix_addr.h  unix_socket.cpp  unix_socket.h
